@@ -1,3 +1,9 @@
+2006-10-15  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/3314
+	* elf.c (assign_file_positions_for_non_load_sections): Don't
+	page align empty SHF_ALLOC sections.  
+
 2006-10-13  Jakub Jelinek  <jakub@redhat.com>
 
 	* elfxx-sparc.c (_bfd_sparc_elf_finish_dynamic_sections): Set
